# ktds-MSAI-7th

./: .env  README.md  app.py  function_app.py  main.py  pyproject.toml  requirements.txt  streamlit.sh
.github/workflows/: main_pro-psm-webapp.yml
cmd/: UploadDocs.cmd
data/: db_schema_sample.csv  db_schema_sample.json  dictionary.csv  dictionary.json  naming_convention_qa.csv  naming_convention_qa.json  naming_rules.json
data/test/: NamingRuleViolationSample.java  naming_rule_violation_sample.py  naming_rule_violation_sample.sql  text_sample.txt
index/: add_index_vector.py  add_vector_data_dictionary.py  add_vector_naming_convention_qa.py  add_vector_naming_rules.py  create_index_dictionary.py  create_index_naming_convention_qa.py  create_index_naming_rules.py
