[project]
name = "ktds-msai-7th"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.24.0",
    "azure-search-documents>=11.6.0",
    "openai>=2.6.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
